# chess

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  arm-toolchain.cmake
include/: ai_player.h  game.h  piece.h
src/: ai_player.cpp  game.cpp  main.cpp  piece.cpp
